--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
-    <!-- External CSS -->
+    <!-- External CSS >> default stylings -?- -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+
+    <link rel="stylesheet" href="/styles/nav.css", type="text/css" />
+
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -17,17 +23,52 @@
     <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
 
+
   <body>
+    <!-- <header></header> -->
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
+      <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+      <p>Blah</p>
+
+
     </main>
 
+    <!-- <footer></footer> -->
   </body>
+
+
 </html>
