--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
-    <link rel="stylesheet" href="/styles/nav.css", type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
@@ -35,34 +37,16 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
-      <p>Blah</p>
+
+      <section class="new-tweet">
+
+        <h2>Compose Tweet</h2>
+        <form action="/tweets" method="POST">
+            <textarea name="text" placeholder="What are you humming about?"></textarea>
+            <input type="submit" value="Tweet">
+            <span class="counter">140</span>
+          </form>
+      </section>
 
 
     </main>
