--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,23 @@
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS >> default stylings -?- -->
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/layout.css" />
 
-    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-    
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" />
+
+    <link rel="stylesheet" href="/styles/new-tweet.css" />
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
 
     <!-- External JS -->
-    <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+    <script src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <script src="/scripts/app.js"></script>
   </head>
 
 
@@ -42,10 +42,11 @@
 
         <h2>Compose Tweet</h2>
         <form action="/tweets" method="POST">
-            <textarea name="text" placeholder="What are you humming about?"></textarea>
-            <input type="submit" value="Tweet">
-            <span class="counter">140</span>
-          </form>
+          <textarea name="text" placeholder="What are you humming about?"></textarea>
+          <input id="tweet" type="submit" value="Tweet">
+          <span class="counter">140</span>
+        </form>
+
       </section>
 
 
