--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 
     <!-- App JS -->
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/composer-char-counter.js"></script>
   </head>
 
 
