adds jq function to update <span> counter

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
 
         <h2>Compose Tweet</h2>
         <form action="/tweets" method="POST">
-          <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <input id="tweet" type="submit" value="Tweet">
+          <textarea class="tweet-area" name="text" placeholder="What are you humming about?"></textarea>
+          <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
 
