--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,8 @@
 
         <h2>Compose Tweet</h2>
         <form action="/tweets" method="POST">
-          <textarea class="tweet-area" name="text" maxlength="140"placeholder="What are you humming about?"></textarea>
+          <!-- maybe add maxlength="140" -->
+          <textarea class="tweet-input" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
