--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="/styles/nav.css" />
 
-    <link rel="stylesheet" href="/styles/new-tweet.css" />
+    <link rel="stylesheet" href="/styles/compose-tweet.css" />
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
@@ -39,15 +39,22 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
 
-      <section class="new-tweet">
+      <section class="compose-tweet">
 
         <h2>Compose Tweet</h2>
         <form action="/tweets" method="POST">
-          <!-- maybe add maxlength="140" -->
+          <!-- maybe add maxlength="140"? -->
           <textarea class="tweet-input" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
+
+      </section>
+
+      <section class="published-tweets">
+        <article class="tweet">
+          
+        </article>
 
       </section>
 
