makes createsTweetElement function use dummy dynamic content

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
       <section id="published-tweets">
 
-        <article class="each-tweet">
+        <!-- <article class="each-tweet">
             <header>
               <img src="/images/icon.png" alt="pic">
               <div class="user-info">
@@ -69,11 +69,13 @@
             </div>
             <footer>
               <p class="time-stamp"> 10 days ago</p>
-              <!-- <div class="icons"> -->
 
-              <!-- </div> -->
+              <div class="icons">
+
+              </div>
+
             </footer>
-        </article>
+        </article> -->
 
       </section>
 
