--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         <form action="/tweets" method="POST">
           <textarea id="tweet-input" name="text" placeholder="What are you humming about?"></textarea>
           <div>
-            <input type="submit" value="Tweet">
+            <input id="submit-twt-btn" type="submit" value="Tweet">
             <span id="counter">140</span>
           </div>
         </form>
