--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button id="compose-btn">Compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
