--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
-    <!-- External CSS >> default stylings -?- -->
+    <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
 
     <!-- App CSS -->
@@ -39,7 +39,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
 
-      <section id="compose-tweet">
+      <section id="compose-tweet" class="hidden">
 
         <h2>Compose Tweet</h2>
         <form action="/tweets" method="POST">
@@ -59,6 +59,5 @@
 
     </main>
   </body>
-
 
 </html>
