adds error messages

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,10 @@
           </div>
         </form>
 
+        <div class="error hidden">
+          <p>Error!</p>
+        </div>
+
       </section>
 
       <section id="published-tweets">
